--- a/Quessly/tr.lproj/Main.strings
+++ b/Quessly/tr.lproj/Main.strings
@@ -1,4 +1,3 @@
-
 /* Class = "UITableViewSection"; headerTitle = "Author"; ObjectID = "10i-BA-qHa"; */
 "10i-BA-qHa.headerTitle" = "Yazar";
 
@@ -11,14 +10,17 @@
 /* Class = "UIButton"; normalTitle = "Cancel"; ObjectID = "3Ob-Up-ozg"; */
 "3Ob-Up-ozg.normalTitle" = "İptal";
 
-/* Class = "UILabel"; text = "Dismiss"; ObjectID = "4Z8-DO-UMm"; */
-"4Z8-DO-UMm.text" = "Kapat";
-
 /* Class = "UINavigationItem"; title = "Content Studio"; ObjectID = "4bE-Da-Nhi"; */
 "4bE-Da-Nhi.title" = "İçerik Stüdyosu";
 
-/* Class = "UILabel"; text = "Thursday"; ObjectID = "55j-kc-ffv"; */
-"55j-kc-ffv.text" = "Perşembe";
+/* Class = "UILabel"; text = "Dismiss"; ObjectID = "4Z8-DO-UMm"; */
+"4Z8-DO-UMm.text" = "Kapat";
+
+/* Class = "UITableViewSection"; headerTitle = "Reset Password"; ObjectID = "5bK-BQ-XMX"; */
+"5bK-BQ-XMX.headerTitle" = "Hesap bilgileri";
+
+/* Class = "UINavigationItem"; title = "Reset Password"; ObjectID = "6ig-9C-MRg"; */
+"6ig-9C-MRg.title" = "Şifreyi Sıfırla";
 
 /* Class = "UILabel"; text = "32 have been marked, 8 need to be inspected."; ObjectID = "6MS-Gk-M3L"; */
 "6MS-Gk-M3L.text" = "32 işaretlendi, 8 gözden geçirilecek.";
@@ -32,14 +34,26 @@
 /* Class = "UITableViewSection"; headerTitle = "Session Content"; ObjectID = "8dI-Fq-ULD"; */
 "8dI-Fq-ULD.headerTitle" = "Oturum İçeriği";
 
+/* Class = "UILabel"; text = "E-mail"; ObjectID = "A8l-TZ-SXZ"; */
+"A8l-TZ-SXZ.text" = "E-posta";
+
+/* Class = "UINavigationItem"; title = "MathJax Test"; ObjectID = "aoD-Py-reG"; */
+"aoD-Py-reG.title" = "MathJax Testi";
+
+/* Class = "UILabel"; text = "Link content"; ObjectID = "aTm-iW-2tb"; */
+"aTm-iW-2tb.text" = "İçerik bağla";
+
 /* Class = "UILabel"; text = "4 questions have not been seen."; ObjectID = "B7w-YN-26o"; */
 "B7w-YN-26o.text" = "4 soru henüz görülmedi.";
 
-/* Class = "UIBarButtonItem"; title = "Item"; ObjectID = "BnW-2h-Qpm"; */
-"BnW-2h-Qpm.title" = "Öğe";
-
 /* Class = "UILabel"; text = "Your schedule is available for the timetable of this session without any collisions."; ObjectID = "C17-JP-WMq"; */
 "C17-JP-WMq.text" = "Programınız bu oturuma herhangi bir çakışma olmadan girebilmeniz için uygun.";
+
+/* Class = "UILabel"; text = "120 minutes"; ObjectID = "c4C-57-rXF"; */
+"c4C-57-rXF.text" = "120 dakika";
+
+/* Class = "UILabel"; text = "starts at 19:00"; ObjectID = "CgI-DJ-QBf"; */
+"CgI-DJ-QBf.text" = "19:00'da başlıyor";
 
 /* Class = "UITableViewSection"; headerTitle = "Information"; ObjectID = "CHI-lJ-HRQ"; */
 "CHI-lJ-HRQ.headerTitle" = "Bilgi";
@@ -47,26 +61,38 @@
 /* Class = "UILabel"; text = "Type"; ObjectID = "CHL-dl-ivJ"; */
 "CHL-dl-ivJ.text" = "Tür";
 
-/* Class = "UILabel"; text = "starts at 19:00"; ObjectID = "CgI-DJ-QBf"; */
-"CgI-DJ-QBf.text" = "19:00'da başlıyor";
-
 /* Class = "UILabel"; text = "Timetable"; ObjectID = "Cou-kt-whN"; */
 "Cou-kt-whN.text" = "Zaman Çizelgesi";
+
+/* Class = "UILabel"; text = "Content"; ObjectID = "doJ-tV-Tdr"; */
+"doJ-tV-Tdr.text" = "İçerik";
+
+/* Class = "UILabel"; text = "Sign Up"; ObjectID = "dSC-hp-A1q"; */
+"dSC-hp-A1q.text" = "Kayıt Ol";
 
 /* Class = "UILabel"; text = "Enroll"; ObjectID = "EEz-Lg-KZd"; */
 "EEz-Lg-KZd.text" = "Kayıt Ol";
 
-/* Class = "UILabel"; text = "19:00"; ObjectID = "EUx-Vk-6dP"; */
-"EUx-Vk-6dP.text" = "19:00";
+/* Class = "UILabel"; text = "120 single-selection questions"; ObjectID = "f33-nL-wZl"; */
+"f33-nL-wZl.text" = "120 çoktan seçmeli soru";
 
 /* Class = "UILabel"; text = "120 minutes"; ObjectID = "Flv-8Y-aMC"; */
 "Flv-8Y-aMC.text" = "120 dakika";
 
+/* Class = "UILabel"; text = "May 5, 2020 @ 07:53 AM"; ObjectID = "fSA-P6-4b3"; */
+"fSA-P6-4b3.text" = "Mayıs 5, 2020 - 19:53";
+
+/* Class = "UILabel"; text = "Send Password Reset Code"; ObjectID = "g1V-ZZ-fpc"; */
+"g1V-ZZ-fpc.text" = "Şifre Sıfırlama Kodu Gönder";
+
+/* Class = "UILabel"; text = "Create New Question"; ObjectID = "gQL-sq-FAl"; */
+"gQL-sq-FAl.text" = "Yeni Soru Yarat";
+
+/* Class = "UILabel"; text = "Dismiss"; ObjectID = "gSz-4v-qxz"; */
+"gSz-4v-qxz.text" = "Kapat";
+
 /* Class = "UILabel"; text = "To receive notifications as they happen, turn on push notifications. You'll also receive them when you're not on Quessly. Turn them off anytime."; ObjectID = "GYp-m1-fAL"; */
 "GYp-m1-fAL.text" = "Çeşitli olaylarda sizi bilgilendirmek amacıyla bildirimler gönderiyoruz. Bildirimler, uygulamada bulunmadığınız zamanlarda da gelebilir. İstediğiniz zaman kapatabilirsiniz.";
-
-/* Class = "UILabel"; text = "3.772 users participating"; ObjectID = "HDF-dt-4hT"; */
-"HDF-dt-4hT.text" = "3.772 kullanıcı katılıyor";
 
 /* Class = "UILabel"; text = "Marathon"; ObjectID = "HWv-Uz-AAf"; */
 "HWv-Uz-AAf.text" = "Maraton";
@@ -80,113 +106,32 @@
 /* Class = "UILabel"; text = "Content"; ObjectID = "I6P-LW-dd1"; */
 "I6P-LW-dd1.text" = "İçerik";
 
-/* Class = "UILabel"; text = "John Appleseed"; ObjectID = "IYJ-sL-CkP"; */
-"IYJ-sL-CkP.text" = "John Appleseed";
-
-/* Class = "UILabel"; text = "Multiple, mutual exclusive"; ObjectID = "Io7-0B-EWt"; */
-"Io7-0B-EWt.text" = "Çok seçenekli, tek seçimli";
-
-/* Class = "UILabel"; text = "ends at 21:00"; ObjectID = "MCB-cz-SYl"; */
-"MCB-cz-SYl.text" = "21:00'da bitiyor";
-
-/* Class = "UILabel"; text = "Desperate times call for desperate measures."; ObjectID = "N2G-5U-9aA"; */
-"N2G-5U-9aA.text" = "Desperate times call for desperate measures.";
-
-/* Class = "UINavigationItem"; title = "Profile"; ObjectID = "Ob9-Xi-BrQ"; */
-"Ob9-Xi-BrQ.title" = "Profil";
-
-/* Class = "UITableViewController"; title = "Profile"; ObjectID = "P0U-uG-VZQ"; */
-"P0U-uG-VZQ.title" = "Profil";
-
-/* Class = "UINavigationItem"; title = "Main menu"; ObjectID = "PYc-1l-Ohp"; */
-"PYc-1l-Ohp.title" = "Ana menü";
-
-/* Class = "UILabel"; text = "Marathon"; ObjectID = "Pdw-5w-L4G"; */
-"Pdw-5w-L4G.text" = "Maraton";
-
-/* Class = "UILabel"; text = "62 have been marked, 12 need to be inspected."; ObjectID = "RR5-KO-7Tu"; */
-"RR5-KO-7Tu.text" = "62 soru işaretlendi, 12 soru gözden geçirilecek.";
-
-/* Class = "UINavigationItem"; title = "Category Explorer"; ObjectID = "S3I-2H-8Xj"; */
-"S3I-2H-8Xj.title" = "Kategoriler";
-
-/* Class = "UILabel"; text = "Timetable"; ObjectID = "SV5-H0-H3y"; */
-"SV5-H0-H3y.text" = "Zaman Çizelgesi";
-
-/* Class = "UILabel"; text = "Title"; ObjectID = "Ssh-cE-s67"; */
-"Ssh-cE-s67.text" = "Başlık";
-
-/* Class = "UIBarButtonItem"; title = "Item"; ObjectID = "Tt1-2j-0zz"; */
-"Tt1-2j-0zz.title" = "Öğe";
-
-/* Class = "UILabel"; text = "Type"; ObjectID = "UNr-rJ-s7k"; */
-"UNr-rJ-s7k.text" = "Tür";
-
-/* Class = "UILabel"; text = "Push Notifications"; ObjectID = "Vcl-xN-A43"; */
-"Vcl-xN-A43.text" = "Bildirimler";
-
-/* Class = "UITableViewSection"; headerTitle = "Your schedule"; ObjectID = "XFC-06-o2F"; */
-"XFC-06-o2F.headerTitle" = "Programınız";
-
-/* Class = "UILabel"; text = "Dismiss"; ObjectID = "XNY-kh-gRT"; */
-"XNY-kh-gRT.text" = "Kapat";
-
-/* Class = "UILabel"; text = "Flag This Content"; ObjectID = "XX6-6B-hUE"; */
-"XX6-6B-hUE.text" = "Şikayet Et";
-
-/* Class = "UILabel"; text = "Sign Out"; ObjectID = "XbI-Nw-sGV"; */
-"XbI-Nw-sGV.text" = "Çıkış Yap";
-
-/* Class = "UILabel"; text = "Duration"; ObjectID = "Y0E-ir-jX8"; */
-"Y0E-ir-jX8.text" = "Süre";
-
-/* Class = "UITableViewSection"; headerTitle = "Sign In"; ObjectID = "YQf-AU-Jsj"; */
-"YQf-AU-Jsj.headerTitle" = "Giriş Yap";
-
-/* Class = "UILabel"; text = "Link content"; ObjectID = "aTm-iW-2tb"; */
-"aTm-iW-2tb.text" = "İçerik bağla";
-
-/* Class = "UINavigationItem"; title = "MathJax Test"; ObjectID = "aoD-Py-reG"; */
-"aoD-Py-reG.title" = "MathJax Testi";
-
-/* Class = "UILabel"; text = "120 minutes"; ObjectID = "c4C-57-rXF"; */
-"c4C-57-rXF.text" = "120 dakika";
-
-/* Class = "UILabel"; text = "John Appleseed"; ObjectID = "d8u-37-eea"; */
-"d8u-37-eea.text" = "John Appleseed";
-
-/* Class = "UILabel"; text = "Sign Up"; ObjectID = "dSC-hp-A1q"; */
-"dSC-hp-A1q.text" = "Kayıt Ol";
-
-/* Class = "UILabel"; text = "Content"; ObjectID = "doJ-tV-Tdr"; */
-"doJ-tV-Tdr.text" = "İçerik";
-
-/* Class = "UILabel"; text = "120 single-selection questions"; ObjectID = "f33-nL-wZl"; */
-"f33-nL-wZl.text" = "120 çoktan seçmeli soru";
-
-/* Class = "UILabel"; text = "May 5, 2020 @ 07:53 AM"; ObjectID = "fSA-P6-4b3"; */
-"fSA-P6-4b3.text" = "Mayıs 5, 2020 - 19:53";
-
-/* Class = "UILabel"; text = "Create New Question"; ObjectID = "gQL-sq-FAl"; */
-"gQL-sq-FAl.text" = "Yeni Soru Yarat";
-
-/* Class = "UILabel"; text = "Dismiss"; ObjectID = "gSz-4v-qxz"; */
-"gSz-4v-qxz.text" = "Kapat";
-
-/* Class = "UILabel"; text = "By signing in to the platform, you accept end user license agreement and terms and conditions."; ObjectID = "hg5-ti-3wu"; */
-"hg5-ti-3wu.text" = "Platforma giriş yaparak son kullanıcı sözleşmesini ve kullanım şartları ve koşullarını kabul etmektesiniz.";
-
 /* Class = "UIButton"; normalTitle = "OK"; ObjectID = "iin-op-aYm"; */
 "iin-op-aYm.normalTitle" = "Tamam";
 
 /* Class = "UINavigationItem"; title = "New Question"; ObjectID = "ing-Yi-Aen"; */
 "ing-Yi-Aen.title" = "Yeni Soru";
 
-/* Class = "UILabel"; text = "Sign In"; ObjectID = "jWg-oS-a5F"; */
-"jWg-oS-a5F.text" = "Giriş Yap";
+/* Class = "UILabel"; text = "Multiple, mutual exclusive"; ObjectID = "Io7-0B-EWt"; */
+"Io7-0B-EWt.text" = "Çok seçenekli, tek seçimli";
+
+/* Class = "UILabel"; text = "Sign In With Google"; ObjectID = "IWT-xe-4np"; */
+"IWT-xe-4np.text" = "Google ile Giriş Yap";
+
+/* Class = "UILabel"; text = "John Appleseed"; ObjectID = "IYJ-sL-CkP"; */
+"IYJ-sL-CkP.text" = "John Appleseed";
 
 /* Class = "UILabel"; text = "Type"; ObjectID = "jam-EX-f1c"; */
 "jam-EX-f1c.text" = "Tür";
+
+/* Class = "UILabel"; text = "Password"; ObjectID = "jGH-Y3-jIZ"; */
+"jGH-Y3-jIZ.text" = "Şifre";
+
+/* Class = "UILabel"; text = "Sign In"; ObjectID = "jWg-oS-a5F"; */
+"jWg-oS-a5F.text" = "Giriş Yap";
+
+/* Class = "UINavigationItem"; title = "Sign up to Quessly"; ObjectID = "jZf-Qp-msY"; */
+"jZf-Qp-msY.title" = "Quessly'e Kayıt Ol";
 
 /* Class = "UILabel"; text = "Desperate times call for desperate measures."; ObjectID = "k8S-ld-RFe"; */
 "k8S-ld-RFe.text" = "Desperate times call for desperate measures.";
@@ -194,8 +139,20 @@
 /* Class = "UILabel"; text = "E-mail"; ObjectID = "kfm-ly-SFk"; */
 "kfm-ly-SFk.text" = "E-posta";
 
+/* Class = "UILabel"; text = "Session Start"; ObjectID = "KRO-a1-djX"; */
+"KRO-a1-djX.text" = "Oturumu Başlat";
+
 /* Class = "UILabel"; text = "SET NAME"; ObjectID = "lBS-gK-t2D"; */
 "lBS-gK-t2D.text" = "SET NAME";
+
+/* Class = "UILabel"; text = "Username"; ObjectID = "maF-Oy-8nk"; */
+"maF-Oy-8nk.text" = "Kullanıcı adı";
+
+/* Class = "UILabel"; text = "ends at 21:00"; ObjectID = "MCB-cz-SYl"; */
+"MCB-cz-SYl.text" = "21:00'da bitiyor";
+
+/* Class = "UILabel"; text = "Status"; ObjectID = "mJf-xj-Fsq"; */
+"mJf-xj-Fsq.text" = "Durum";
 
 /* Class = "UITextView"; text = "Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda."; ObjectID = "mKY-vc-vsR"; */
 "mKY-vc-vsR.text" = "Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.";
@@ -203,38 +160,65 @@
 /* Class = "UILabel"; text = "120 single-selection questions"; ObjectID = "mWL-ug-pfg"; */
 "mWL-ug-pfg.text" = "120 tek seçimli soru";
 
-/* Class = "UILabel"; text = "Change Password"; ObjectID = "mhv-ZN-l3a"; */
-"mhv-ZN-l3a.text" = "Şifreyi Değiştir";
-
 /* Class = "UITableViewSection"; headerTitle = "Publisher"; ObjectID = "nQ2-tR-gvq"; */
 "nQ2-tR-gvq.headerTitle" = "Yayımcı";
 
 /* Class = "UITableViewSection"; headerTitle = "Session information"; ObjectID = "o4V-bO-fef"; */
 "o4V-bO-fef.headerTitle" = "Oturum bilgisi";
 
+/* Class = "UILabel"; text = "Marathon"; ObjectID = "Pdw-5w-L4G"; */
+"Pdw-5w-L4G.text" = "Maraton";
+
 /* Class = "UITableViewSection"; headerTitle = "Session Content"; ObjectID = "pG2-zB-7f8"; */
 "pG2-zB-7f8.headerTitle" = "Oturum İçeriği";
+
+/* Class = "UINavigationItem"; title = "Main menu"; ObjectID = "PYc-1l-Ohp"; */
+"PYc-1l-Ohp.title" = "Ana menü";
+
+/* Class = "UITextField"; placeholder = "username"; ObjectID = "Q3z-nm-fOx"; */
+"Q3z-nm-fOx.placeholder" = "kullanici_adi";
 
 /* Class = "UIBarButtonItem"; title = "Select"; ObjectID = "qLc-2S-I5F"; */
 "qLc-2S-I5F.title" = "Seç";
 
+/* Class = "UITextField"; placeholder = "••••••"; ObjectID = "Qsp-jF-cHT"; */
+"Qsp-jF-cHT.placeholder" = "••••••";
+
+/* Class = "UITextField"; placeholder = "••••••"; ObjectID = "R6m-kn-oUs"; */
+"R6m-kn-oUs.placeholder" = "••••••";
+
 /* Class = "UITextField"; placeholder = "example@mail.com"; ObjectID = "r7C-xu-pn9"; */
-"r7C-xu-pn9.placeholder" = "example@mail.com";
-
-/* Class = "UILabel"; text = "Name of the session"; ObjectID = "rIh-sx-roj"; */
-"rIh-sx-roj.text" = "Oturum adı";
-
-/* Class = "UILabel"; text = "Type"; ObjectID = "rMx-nQ-vGY"; */
-"rMx-nQ-vGY.text" = "Tür";
+"r7C-xu-pn9.placeholder" = "ornek@e-posta.com";
 
 /* Class = "UITableViewController"; title = "Main menu"; ObjectID = "rcR-a0-dMH"; */
 "rcR-a0-dMH.title" = "Ana menü";
 
+/* Class = "UILabel"; text = "Type"; ObjectID = "rMx-nQ-vGY"; */
+"rMx-nQ-vGY.text" = "Tür";
+
+/* Class = "UILabel"; text = "62 have been marked, 12 need to be inspected."; ObjectID = "RR5-KO-7Tu"; */
+"RR5-KO-7Tu.text" = "62 soru işaretlendi, 12 soru gözden geçirilecek.";
+
+/* Class = "UINavigationItem"; title = "Category Explorer"; ObjectID = "S3I-2H-8Xj"; */
+"S3I-2H-8Xj.title" = "Kategoriler";
+
 /* Class = "UILabel"; text = "ends at 21:00"; ObjectID = "sqO-7u-rIX"; */
 "sqO-7u-rIX.text" = "21:00'da bitiyor";
 
+/* Class = "UILabel"; text = "Title"; ObjectID = "Ssh-cE-s67"; */
+"Ssh-cE-s67.text" = "Başlık";
+
+/* Class = "UILabel"; text = "Timetable"; ObjectID = "SV5-H0-H3y"; */
+"SV5-H0-H3y.text" = "Zaman Çizelgesi";
+
 /* Class = "UILabel"; text = "starts at 19:00"; ObjectID = "tFU-hN-C5k"; */
 "tFU-hN-C5k.text" = "19:00'da başlıyor";
+
+/* Class = "UITextField"; placeholder = "example"; ObjectID = "tRZ-s2-WrN"; */
+"tRZ-s2-WrN.placeholder" = "örn. kullaniciadi";
+
+/* Class = "UIBarButtonItem"; title = "Item"; ObjectID = "Tt1-2j-0zz"; */
+"Tt1-2j-0zz.title" = "Öğe";
 
 /* Class = "UILabel"; text = "Password"; ObjectID = "tvU-Mt-o9a"; */
 "tvU-Mt-o9a.text" = "Şifre";
@@ -242,8 +226,17 @@
 /* Class = "UITableViewSection"; headerTitle = "Session information"; ObjectID = "u24-Jf-L4h"; */
 "u24-Jf-L4h.headerTitle" = "Oturum bilgisi";
 
+/* Class = "UILabel"; text = "Type"; ObjectID = "UNr-rJ-s7k"; */
+"UNr-rJ-s7k.text" = "Tür";
+
 /* Class = "UIBarButtonItem"; title = "Profile"; ObjectID = "uQg-DG-bgz"; */
 "uQg-DG-bgz.title" = "Profil";
+
+/* Class = "UITableViewSection"; headerTitle = "Sign up"; ObjectID = "usD-GZ-k45"; */
+"usD-GZ-k45.headerTitle" = "Kayıt Ol";
+
+/* Class = "UILabel"; text = "Push Notifications"; ObjectID = "Vcl-xN-A43"; */
+"Vcl-xN-A43.text" = "Bildirimler";
 
 /* Class = "UINavigationItem"; title = "Sign in to Quessly"; ObjectID = "vMZ-sw-JDf"; */
 "vMZ-sw-JDf.title" = "Quessly'e giriş yap";
@@ -251,14 +244,86 @@
 /* Class = "UILabel"; text = "Date Added"; ObjectID = "vWT-ie-DcW"; */
 "vWT-ie-DcW.text" = "Eklenme Tarihi";
 
+/* Class = "UITableViewSection"; headerTitle = "Your schedule"; ObjectID = "XFC-06-o2F"; */
+"XFC-06-o2F.headerTitle" = "Programınız";
+
 /* Class = "UILabel"; text = "Share"; ObjectID = "xIL-of-iYD"; */
 "xIL-of-iYD.text" = "Paylaş";
 
-/* Class = "UILabel"; text = "Leave Session"; ObjectID = "yLX-Aq-4hk"; */
-"yLX-Aq-4hk.text" = "Oturumu Terk Et";
+/* Class = "UILabel"; text = "Username"; ObjectID = "xKt-QZ-ZE6"; */
+"xKt-QZ-ZE6.text" = "Kullanıcı adı";
+
+/* Class = "UILabel"; text = "Dismiss"; ObjectID = "XNY-kh-gRT"; */
+"XNY-kh-gRT.text" = "Kapat";
+
+/* Class = "UILabel"; text = "Flag This Content"; ObjectID = "XX6-6B-hUE"; */
+"XX6-6B-hUE.text" = "Şikayet Et";
+
+/* Class = "UILabel"; text = "Duration"; ObjectID = "Y0E-ir-jX8"; */
+"Y0E-ir-jX8.text" = "Süre";
+
+/* Class = "UILabel"; text = "Confirm password"; ObjectID = "yhg-ch-Fm8"; */
+"yhg-ch-Fm8.text" = "Şifre tekrarı";
 
 /* Class = "UILabel"; text = "1 hour 22 minutes"; ObjectID = "yjB-Q7-F6h"; */
 "yjB-Q7-F6h.text" = "1 saat 22 dakika";
 
+/* Class = "UILabel"; text = "Leave Session"; ObjectID = "yLX-Aq-4hk"; */
+"yLX-Aq-4hk.text" = "Oturumu Terk Et";
+
+/* Class = "UITextField"; placeholder = "example@mail.com"; ObjectID = "yOh-WC-Cn0"; */
+"yOh-WC-Cn0.placeholder" = "ornek@e-posta.com.tr";
+
+/* Class = "UITableViewSection"; headerTitle = "Sign In"; ObjectID = "YQf-AU-Jsj"; */
+"YQf-AU-Jsj.headerTitle" = "Giriş Yap";
+
 /* Class = "UILabel"; text = "Time remaining"; ObjectID = "z3J-pu-D8t"; */
 "z3J-pu-D8t.text" = "Kalan zaman";
+
+/* Class = "UILabel"; text = "Sign Up"; ObjectID = "zdc-Tb-117"; */
+"zdc-Tb-117.text" = "Kayıt Ol";
+
+/* Class = "UILabel"; text = "By signing up to the platform, you accept end user license agreement and terms and conditions."; ObjectID = "APC-KM-BB8"; */
+"APC-KM-BB8.text" = "";
+
+/* Class = "UILabel"; text = "Label"; ObjectID = "BFW-MZ-iiy"; */
+"BFW-MZ-iiy.text" = "";
+
+/* Class = "UILabel"; text = "10 seconds"; ObjectID = "bfy-hP-0Ss"; */
+"bfy-hP-0Ss.text" = "";
+
+/* Class = "UILabel"; text = "Confirmation Code"; ObjectID = "BXZ-5L-vWg"; */
+"BXZ-5L-vWg.text" = "Onay kodu";
+
+/* Class = "UITableViewSection"; headerTitle = "Privileges"; ObjectID = "dnc-pS-K4j"; */
+"dnc-pS-K4j.headerTitle" = "";
+
+/* Class = "UINavigationItem"; title = "Push Notifications"; ObjectID = "e2g-lp-m9v"; */
+"e2g-lp-m9v.title" = "";
+
+/* Class = "UILabel"; text = "Detail"; ObjectID = "Gqd-Cb-nAA"; */
+"Gqd-Cb-nAA.text" = "";
+
+/* Class = "UITextField"; placeholder = "••••••"; ObjectID = "h4o-tT-39h"; */
+"h4o-tT-39h.placeholder" = "••••••";
+
+/* Class = "UILabel"; text = "Title"; ObjectID = "LvW-1R-Obs"; */
+"LvW-1R-Obs.text" = "";
+
+/* Class = "UILabel"; text = "Request For Consent"; ObjectID = "MkY-De-0Qt"; */
+"MkY-De-0Qt.text" = "";
+
+/* Class = "UITableViewSection"; headerTitle = "Trigger"; ObjectID = "o0j-hE-hZe"; */
+"o0j-hE-hZe.headerTitle" = "";
+
+/* Class = "UILabel"; text = "Confirmation Code"; ObjectID = "Rbn-tq-ieo"; */
+"Rbn-tq-ieo.text" = "Onay kodu";
+
+/* Class = "UITableViewSection"; headerTitle = "Push Notifications"; ObjectID = "saW-xB-SdT"; */
+"saW-xB-SdT.headerTitle" = "";
+
+/* Class = "UILabel"; text = "Time Interval"; ObjectID = "ugd-OY-jug"; */
+"ugd-OY-jug.text" = "";
+
+/* Class = "UILabel"; text = "N/A"; ObjectID = "ZAC-jm-2UV"; */
+"ZAC-jm-2UV.text" = "";
